--- a/Dare4CharFrontend/src/app/home/post/post.component.html
+++ b/Dare4CharFrontend/src/app/home/post/post.component.html
@@ -1,2 +1,4 @@
 <p *ngIf="posts.length==0" class="dummy">No Post found :(<br> Please make friends to have more fun</p>
-<app-post-model *ngFor="let post of posts" [post]="post"></app-post-model>
+<div class="post" >
+    <app-post-model *ngFor="let post of posts" [post]="post"></app-post-model>
+</div>
