--- a/Dare4CharFrontend/src/app/search/search.component.css
+++ b/Dare4CharFrontend/src/app/search/search.component.css
@@ -8,6 +8,23 @@
 }
 
 
+
+.container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 500px;
+    margin: auto;
+    padding: 0;
+}
+.status{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin: 0;
+}
+
+
 @media screen and (min-width: 550px) {
     :host{
         display: block;
