--- a/Dare4CharFrontend/src/app/home/chat/chat.component.html
+++ b/Dare4CharFrontend/src/app/home/chat/chat.component.html
@@ -1,1 +1,5 @@
-<p *ngIf="chats.length==0" class="dummy">No chats found :(<br> Please make friends to have more fun</p>
+<p *ngIf="users.length==0" class="dummy">No chats found :(<br> Please make friends to have more fun</p>
+
+<app-user-list  *ngIf="!selected_user" [users]="users" (userclick)="onUserClick($event)"></app-user-list>
+
+<app-message-page *ngIf="selected_user" [user]="selected_user"></app-message-page>
