--- a/Dare4CharFrontend/src/app/profile-model/profile-model.component.css
+++ b/Dare4CharFrontend/src/app/profile-model/profile-model.component.css
@@ -4,6 +4,11 @@
     position:relative;
     left: -25px;
 }
+.mat-icon{
+    position: absolute;
+    font-size: 30px;
+    text-align: center;
+}
 
 .profile{
     width: 100%;
