--- a/Dare4CharFrontend/src/app/search/search.component.html
+++ b/Dare4CharFrontend/src/app/search/search.component.html
@@ -1,19 +1,14 @@
 <div class="container">
-    <div *ngIf="!user && !type" >
-        <!-- <mat-card *ngFor="let user of users;index as i" class="status" (click)="onRefresh(user)">
-            <div mat-card-avatar 
-                [ngStyle]="{'background': '#000 url(' + getProfile(i) + ') no-repeat','background-size': 'cover'}"></div>
-            <div>
-                <mat-card-title>{{ user.username }}</mat-card-title>
-            </div>
-        </mat-card> -->
-        <app-user-list [users]="users" (userclick)="onRefresh($event)"></app-user-list>
+    <div *ngIf="!user && !type">
+        <input type="text" style="width: 100%;" placeholder="Search" [(ngModel)]="query">
+        <app-user-list [users]="users" [query]="query" (userclick)="onRefresh($event)"></app-user-list>
     </div>
-    <button color="primary" 
+    <!-- <button color="primary" 
         *ngIf="user && type" 
         mat-raised-button 
         style="width: 100px;text-align: center;margin: auto;margin-top: 5px;margin-bottom: 5px;" 
-        (click)="onGoBack()">Go back</button>
+        (click)="onGoBack()">Go back</button> -->
+    <mat-icon *ngIf="user && type"  (click)=" onGoBack()">arrow_back</mat-icon>
     <app-profile-model 
         *ngIf="user && type" 
         [user]="user"
