--- a/Dare4CharFrontend/src/app/home/user-list/user-list.component.html
+++ b/Dare4CharFrontend/src/app/home/user-list/user-list.component.html
@@ -1,4 +1,5 @@
-<mat-card *ngFor="let user of users;index as i" class="status" (click)="onClickUser(user)">
+<input type="text" style="width: 100%;padding: 10px;" placeholder="Search" [(ngModel)]="query">
+<mat-card *ngFor="let user of users | searchFilter : query;index as i" class="status" (click)="onClickUser(user)">
     <div mat-card-avatar 
         [ngStyle]="{'background': '#000 url(' + getProfile(i) + ') no-repeat','background-size': 'cover'}"></div>
     <div>
