--- a/Dare4CharFrontend/src/app/shared/user-list/user-list.component.html
+++ b/Dare4CharFrontend/src/app/shared/user-list/user-list.component.html
@@ -3,6 +3,6 @@
     <div mat-card-avatar 
         [ngStyle]="{'background': '#000 url(' + getProfile(i) + ') no-repeat','background-size': 'cover'}"></div>
     <div>
-        <mat-card-title>{{ user.username }}</mat-card-title>
+        <mat-card-title>{{ user.username }} <mat-icon *ngIf="user.isPro">verified</mat-icon></mat-card-title>
     </div>
 </mat-card>
