--- a/Dare4CharFrontend/src/app/home/chat/chat.component.html
+++ b/Dare4CharFrontend/src/app/home/chat/chat.component.html
@@ -2,4 +2,4 @@
 
 <app-user-list  *ngIf="!selected_user" [users]="users" (userclick)="onUserClick($event)"></app-user-list>
 
-<app-message-page *ngIf="selected_user" [user]="selected_user"></app-message-page>
+<app-message-page *ngIf="selected_user" [user]="selected_user" (back)="onUnselectUser()"></app-message-page>
