--- a/Dare4CharFrontend/src/app/home/message-page/message-page.component.css
+++ b/Dare4CharFrontend/src/app/home/message-page/message-page.component.css
@@ -11,6 +11,7 @@
     flex-direction: row;
     flex: 1 1 auto;
     width: 100%;
+    height: 50px;
     padding: 5px;
     margin: 0;
     top: 0;
