new message socket.io connected...

--- a/Dare4CharFrontend/src/app/home/message-page/message-page.component.html
+++ b/Dare4CharFrontend/src/app/home/message-page/message-page.component.html
@@ -11,7 +11,7 @@
         *ngFor="let date_message of allMessages"
         [date_message]="date_message"
         [user]="user"
-        [curr_userid]="curr_userid"></app-date-chat-model>
+        [curr_userid]="curr_userid" [change]="change"></app-date-chat-model>
 
 </div>
 <div class="messagebox">
