pull down to refresh and tab fixed

--- a/Dare4CharFrontend/src/app/app.component.html
+++ b/Dare4CharFrontend/src/app/app.component.html
@@ -1,3 +1,5 @@
+<pull-to-refresh></pull-to-refresh>
+
 <!-- Toolbar -->
 <mat-toolbar *ngIf="isLogin()" class="toolbar" color="primary">
     <mat-toolbar-row>
