--- a/Dare4CharFrontend/src/app/home/comments/comments.component.html
+++ b/Dare4CharFrontend/src/app/home/comments/comments.component.html
@@ -1,7 +1,17 @@
 <div  class="commentbox">
-    <textarea placeholder="comment" rows="1" wrap="hard"></textarea>
-    <mat-icon>send</mat-icon>
+    <textarea placeholder="comment" rows="1" wrap="hard" #comment></textarea>
+    <mat-icon (click)="onComment(comment.value)">send</mat-icon>
 </div>
 <div class="content">
-
+    <mat-card *ngFor="let comment of comments ;index as i">
+        <mat-card-header *ngIf="users[comment.userid]">
+            <img mat-card-avatar src="{{ getProfile(i) }}">
+            <div>
+                <mat-card-title>{{ users[comment.userid].username }} <mat-icon *ngIf="users[comment.userid].isPro">verified</mat-icon></mat-card-title>
+                <mat-card-subtitle  style="font-size: 20px;font-weight: 800;" ><strong>{{ comment.message }}</strong></mat-card-subtitle>
+            </div>
+        </mat-card-header>
+            
+    </mat-card>
+        
 </div>
